# writewavheader

./: CMakeLists.txt
src/: WavFunctions.cc  main.cpp
